k8s/07-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: simpleauth
spec:
  type: NodePort
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  selector:
    app: web
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
